    * command up_repo_rev renamed up-repo-rev, for easy typing experience
    * command fix_props renamed fix-props, for easy typing experience
    * command fix_symlinks renamed fix-symlinks, for easy typing experience
    * command createlinks renamed create-links, for easy typing experience.
    * command createkeys renamed create-rsa-keys, for easy typing experience and more fitting name.

    programmer visible changes:
    * new method for PlatformSpecificHelperBase & derivatives: tar/untar
    * Implemented rmdir, rmfile for Windows
    * removed checks for __ALLOWED_COMMANDS__, this functionality is already covered by getattr(self, "do_"+the_command)
    * @func_log_wrapper removed from all functions. It interfered with PyCharm debugging.
    * instlInstance replaced with instlObj to make lines shorter.
    * download_from_file_or_url function: added params for checking signature with public key.
    * prevent variables INFO_MAP_SIG, PUBLIC_KEY from being written to batch file.
    * started checking of info_map.txt when downloading.
    * many new checksum and signature functions.
    * rearranged instl_help.yaml commands in alphabetical order.
    * download_from_file_or_url can check signature or checksum if they are given.
    * command createlinks renamed create-links, for easy typing experience.
    * command createkeys renamed create-rsa-keys, for easy typing experience and more fitting name.
    * parser returns the name of all possible commands.
    
26/1/2014 0.7.2  Shai Shasag <shai@waves.com>

    user visible changes, client:
     * Fixed exception handling and output to stderr.
        Now all "bad" output should go to stderr. Errorlevel should be proearly set.

23/1/2014 0.7.1 Shai Shasag <shai@waves.com>

    user visible changes, client:
    * progress report for folder actions
    * SET_ICON_TOOL_PATH instead of SET_ICON_PATH
    * better progress report for svn sync

23/1/2014 0.7.0 Shai Shasag <shai@waves.com>

     Main 0.7 features: