@@ -6,6 +6,7 @@ import filecmp
 import subprocess
 import StringIO
 import boto
+import rsa
 
 from instlException import *
 from pyinstl.log_utils import func_log_wrapper
@@ -41,6 +42,22 @@ class InstlAdmin(InstlInstanceBase):
             self.cvl.set_var("__CONFIG_FILE_PATH__").append(config_file_resolved)
             self.read_yaml_file(config_file_resolved)
             self.resolve_defined_paths()
+        if "PUBLIC_KEY" not in self.instlObj.cvl:
+            if "PUBLIC_KEY_FILE" in self.instlObj.cvl:
+                try:
+                    public_key_file = self.instlObj.cvl.get_str("$(PUBLIC_KEY_FILE)")
+                    public_key_text = open(public_key_file, "rb").read()
+                    self.instlObj.cvl.set_var("PUBLIC_KEY", "from "+public_key_file).append(public_key_text)
+                except:
+                    pass # lo nora
+        if "PRIVATE_KEY" not in self.instlObj.cvl:
+            if "PRIVATE_KEY_FILE" in self.instlObj.cvl:
+                try:
+                    private_key_file = self.instlObj.cvl.get_str("$(PRIVATE_KEY_FILE)")
+                    private_key_text = open(private_key_file, "rb").read()
+                    self.instlObj.cvl.set_var("PUBLIC_KEY", "from "+private_key_file).append(private_key_text)
+                except:
+                    pass # lo nora
 
     def do_command(self):
         the_command = self.cvl.get_str("__MAIN_COMMAND__")
@@ -390,7 +407,6 @@ class InstlAdmin(InstlInstanceBase):
         with open(local_file, "w") as wfd:
             writeAsYaml(repo_rev_yaml, out_stream=wfd, indentor=None, sort=True)
             print("created", local_file)
-        import boto
         s3 		= boto.connect_s3(self.cvl.get_str("AWS_ACCESS_KEY_ID"), self.cvl.get_str("AWS_SECRET_ACCESS_KEY"))
         bucket 	= s3.get_bucket(self.cvl.get_str("S3_BUCKET_NAME"))
         key_obj = boto.s3.key.Key(bucket)
@@ -591,10 +607,8 @@ class InstlAdmin(InstlInstanceBase):
             self.run_batch_file()
 
     def do_create_rsa_keys(self):
-        config_dir, _ = os.path.split(self.cvl.get_str("__CONFIG_FILE_PATH__"))
-        public_key_file = os.path.join(config_dir, self.cvl.resolve_string("$(REPO_NAME).public_key"))
-        private_key_file = os.path.join(config_dir, self.cvl.resolve_string("$(REPO_NAME).private_key"))
-        import rsa
+        public_key_file = self.cvl.resolve_string("$(REPO_NAME).public_key")
+        private_key_file = self.cvl.resolve_string("$(REPO_NAME).private_key")
         pubkey, privkey = rsa.newkeys(4096, poolsize=8)
         with open(public_key_file, "wb") as wfd:
             wfd.write(pubkey.save_pkcs1(format='PEM'))
